--- a/src/style.css
+++ b/src/style.css
@@ -9,4 +9,52 @@ html, body {
     width: 100%;
     display: flex;
     flex-direction: column;
+    font-family: 'Eurostile';
+}
+
+@font-face {
+    font-family: 'Eurostile';
+    src: url('./media/fonts/fonnts.com-Eurostile_Cond.otf');
+}
+
+main {
+    display: flex;
+    width: 100vw;
+}
+
+.landing-left {
+    height: 100vh;
+    width: 75vw;
+    background-color: rgb(220, 220, 220);
+    display: flex;
+    color: rgb(30, 30, 30);
+}
+
+.landing-left-media-container {
+    height: 100%;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    padding: 5rem;
+    gap: 1rem;
+}
+
+.name-heading {
+    font-size: 1.25rem;
+}
+
+.char-img {
+    width: clamp(260px, 40vw, 450px); 
+    height: auto;
+}
+
+.landing-left-text-container {
+    height: 100%;
+    width: 50%;
+}
+
+.landing-right {
+    height: 100vh;
+    width: 25vw;
+    background-color: rgb(30, 30, 30);
 }
