--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,11 @@ html, body {
     display: flex;
     flex-direction: column;
     font-family: 'Eurostile';
+    cursor: url('./media/images/cursor-1.png'), auto;
+}
+
+a:hover {
+    cursor: url('./media/images/cursor-2.png'), auto;
 }
 
 @font-face {
@@ -44,13 +49,18 @@ main {
 }
 
 .char-img {
-    width: clamp(260px, 40vw, 450px); 
+    width: clamp(400px, 40vw, 450px); 
     height: auto;
 }
 
 .landing-left-text-container {
     height: 100%;
     width: 50%;
+    padding: 5rem;
+}
+
+.intro-text {
+    font-size: 1.25rem;
 }
 
 .landing-right {
