--- a/src/style.css
+++ b/src/style.css
@@ -13,8 +13,16 @@ html, body {
     cursor: url('./media/images/cursor-1.png'), auto;
 }
 
+a {
+    text-decoration: none;
+}
+
 a:hover {
     cursor: url('./media/images/cursor-2.png'), auto;
+}
+
+::selection {
+    background: #908d87;
 }
 
 @font-face {
@@ -56,11 +64,46 @@ main {
 .landing-left-text-container {
     height: 100%;
     width: 50%;
-    padding: 5rem;
+    padding-top: 5rem;
+    padding-right: 4rem;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+}
+
+.p1-container {
+    display: flex;
+    gap: 1rem;
+}
+
+.p-icon-img {
+    aspect-ratio: 1 / 1;
+    height: 50px;
 }
 
 .intro-text {
     font-size: 1.25rem;
+}
+
+.p2-container {
+    display: none;
+    justify-content: flex-end;
+    gap: 1rem;
+}
+
+.reply-text-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.reply-link {
+    font-size: 1.25rem;
+    color: rgb(220, 220, 220);
+    background-color: rgb(30, 30, 30);
+    display: flex;
+    justify-content: center;
+    padding: 0.25rem;
 }
 
 .landing-right {
