--- a/src/style.css
+++ b/src/style.css
@@ -111,3 +111,20 @@ main {
     width: 25vw;
     background-color: rgb(30, 30, 30);
 }
+
+.project-container {
+    display: flex;
+    flex-direction: column;
+    padding: 5rem;
+    gap: 0.5rem;
+}
+
+.project-header {
+    font-size: 1.25rem;
+    color: rgb(220, 220, 220);
+}
+
+.project-link {
+    font-size: 1rem;
+    color: rgb(130, 130, 130);
+}
