Refactored code for clarity/organization

--- a/src/style.css
+++ b/src/style.css
@@ -35,7 +35,7 @@ main {
     width: 100vw;
 }
 
-.landing-left {
+.page-left {
     height: 100vh;
     width: 75vw;
     background-color: rgb(220, 220, 220);
@@ -43,7 +43,7 @@ main {
     color: rgb(30, 30, 30);
 }
 
-.landing-left-media-container {
+.profile-container {
     height: 100%;
     width: 50%;
     display: flex;
@@ -61,7 +61,7 @@ main {
     height: auto;
 }
 
-.landing-left-text-container {
+.chat-container {
     height: 100%;
     width: 50%;
     padding-top: 5rem;
@@ -106,7 +106,7 @@ main {
     padding: 0.25rem;
 }
 
-.landing-right {
+.page-right {
     height: 100vh;
     width: 25vw;
     background-color: rgb(30, 30, 30);
