Removed height constraints for page-left and page-right

--- a/src/style.css
+++ b/src/style.css
@@ -48,9 +48,12 @@ button {
     --color-black: rgb(30, 30, 30);
     --color-project: rgb(130, 130, 130);
 }
+
+/*
 @supports (height: 100dvh) {
-  .page-left, .page-right, .chat-container { height: 100dvh; }
+  .page-left, .page-right { height: 100dvh; }
 }
+*/
 
 /* Global layout */
 
