--- a/src/style.css
+++ b/src/style.css
@@ -49,11 +49,11 @@ button {
     --color-project: rgb(130, 130, 130);
 }
 
-
+/*
 @supports (height: 100dvh) {
   .page-left, .chat-container { height: 100dvh; }
 }
-
+*/
 
 /* Global layout */
 
@@ -164,5 +164,5 @@ main {
         display: flex;
     }
 
-    .chat-container { padding-bottom: calc(env(safe-area-inset-bottom) + var(--pad)); }
+    .chat-container { padding-bottom: calc(env(safe-area-inset-bottom) + var(--pad)); height: auto;}
 }
